--- a/css/stylet.css
+++ b/css/stylet.css
@@ -10,7 +10,7 @@
     background-color: #4E598C;
     background-position: center;
     background-size: cover;
-    position: absolute;
+    position: relative;
 }
 
 nav{
@@ -63,13 +63,6 @@ nav-links ul li:hover {
     opacity: 1.0;
 }
 
-.home{
-    height: 50vh;
-    width: 50%;
-    background-color: rgb(36, 221, 82);
-    display:flex;
-    float: left;
-}
 .image {
     height: 50vh;
     width: 50%;
@@ -77,8 +70,18 @@ nav-links ul li:hover {
     display:flex
 }
 
-#form{
+#neeth{
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    width: 100%;
+    height: 90vh;
+}
+
+#thisura{
+    text-align:center;
     position: absolute;
-    float: inline-end;
-    background-color: rgb(45, 169, 226);
+    float: left;
+    width: 100%;
+    height: 90vh;
+    background-color: rgb(255, 255, 255);
 }
