--- a/css/styleCharith.css
+++ b/css/styleCharith.css
@@ -5,10 +5,11 @@ mark {
 }
 
 #center {
-    width: 100%;
+    width: 70%;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 20px;
+    padding-top: 60px;
 }
 
 #table1 {
