--- a/css/styleCharith.css
+++ b/css/styleCharith.css
@@ -1,5 +1,5 @@
 #tbleheader {
-    font-size: 22px;
+    font-size: 180%;
     margin-bottom: 0px
 }
 
@@ -13,8 +13,8 @@ mark {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 20px;
-    padding-top: 60px;
+    padding-bottom: 2%;
+    padding-top: 6%;
 }
 
 #table1 {
@@ -28,7 +28,7 @@ mark {
 #table1 td,
 #table1 th {
     border: 1px solid #ddd;
-    padding: 10px;
+    padding: 0.7%;
 }
 
 #table1 tr:nth-child(even) {
