--- a/css/style_epa.css
+++ b/css/style_epa.css
@@ -24,7 +24,7 @@
 
 }
 
-#neeth{
+/* #neeth{
     background-color: rgb(255, 255, 255);
     position: relative;
     width: 100%;
@@ -39,7 +39,7 @@
     width: 100%;
     height: 90vh;
     background-color: rgb(255, 255, 255);
-}
+} */
 
 nav{
     display: flex;
