--- a/css/style_neeth.css
+++ b/css/style_neeth.css
@@ -1,8 +1,3 @@
-#page2-body{
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-}
-
 .lines{
     margin: 0.25rem;
 }
@@ -19,46 +14,31 @@
 #title{
     font-size: 300%;
     font-weight: lighter;
+    margin-top: 6%;;
 }
 
-
-#menu-bar{
-    background-color: #4E598C;
-    height: 75px;
-}
-
-#menu-item{
-    position: absolute;  
-    top: 5%;
-    right: 2%;
-}
-
-#logo{
-    position:relative;
-    height: 100%;
-    
-}
 
 #left-part{
-    width: 50%;
-    padding:7% 0% 7% 4%;
+    width: 47%;
+    padding:7% 0% 7% 0%;
+    position: relative;
     float: left;
-    position: absolute;
 }
 
 #imghtml{
-    width: 75%;
-    height: 75%;
+    width: 70%;
+    height: 70%;
+    margin-left: 10%;
 }
 
 #right-part{
+    position: relative;
     width: 38%;
-    margin-top: 2%;
     padding-right: 11%;
     padding-left: 2%;
     right: 0;
-    float: left;
-    position: absolute;
+    float: right; 
+    
 }
 
 
@@ -71,14 +51,6 @@
     background-color: #f0f0f0;
 }
 
-#list-tags{
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-ol{
-    padding-right: 10px;
-}
 
 #p-left{
     text-align: left;
@@ -102,10 +74,15 @@ ol{
 @media screen and (max-width: 800px){      
     #left-part, #right-part {
         position: relative;
-        width: 80%;
+        padding-right: 4%;
+        padding-left: 2%;
+        width: 90%;
         margin: auto;
-        padding: auto;
-        
+        float: none;    
+    }
+
+    #imghtml{
+        padding-left: 5%;
     }
 }
 
