--- a/css/style_epa.css
+++ b/css/style_epa.css
@@ -1,9 +1,9 @@
-
-*{
+* {
     font-family: 'Roboto', sans-serif;
     margin: 0;
 }
-.header{
+
+.header {
     /* min-height: 100vh; */
     height: 10vh;
     width: 100%;
@@ -13,81 +13,66 @@
     position: sticky;
 }
 
-#satha{
+#satha {
     position: relative;
     background-color: #fff;
 }
 
-#charith{
+#charith {
     position: relative;
     margin-top: 200px;
 
 }
 
-/* #neeth{
-    background-color: rgb(255, 255, 255);
-    position: relative;
-    width: 100%;
-    height: 90vh;
-}
-
-#thisura{
-    display: block;
-    text-align:center;
-    position: absolute;
-    float: left;
-    width: 100%;
-    height: 90vh;
-    background-color: rgb(255, 255, 255);
-} */
-
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-nav img{
-    width : 10vh;
-    height : 10vh;
+nav img {
+    width: 10vh;
+    height: 10vh;
 }
 
-.nav-links{
+.nav-links {
     flex: 1;
     text-align: right;
 }
-.nav-links ul li{
+
+.nav-links ul li {
     list-style: none;
-    display : inline-block;
+    display: inline-block;
     padding: 16px 24px;
     position: relative;
     color: #ffffff
 }
 
 nav-links ul li:hover {
-    background:#ffffff;
+    background: #ffffff;
     color: #000000;
-  }
+}
 
-.nav-links ul li a{
-    color:#ffffff;
+.nav-links ul li a {
+    color: #ffffff;
     text-decoration: none;
     font-size: 18px;
 }
 
-.nav-links ul li::after{
-    content:"";
-    width :0%;
-    height : 2px;
-    background : #DDDDDD;
-    display:block;
+.nav-links ul li::after {
+    content: "";
+    width: 0%;
+    height: 2px;
+    background: #DDDDDD;
+    display: block;
     margin-top: 10px;
     transition: 0.5s;
     opacity: 0.5;
-    
+
 }
-.nav-links ul li:hover::after{
-    width : 100%;
+
+.nav-links ul li:hover::after {
+    width: 100%;
     opacity: 1.0;
 }
 
@@ -95,20 +80,21 @@ nav-links ul li:hover {
     height: 50vh;
     width: 50%;
     background-color: rgb(221, 162, 36);
-    display:flex
+    display: flex
 }
-@media screen and (max-width: 800px){      
-    .header,table1 {
+
+@media screen and (max-width: 800px) {
+
+    .header,
+    table1 {
         position: relative;
-        width:auto;
+        width: auto;
         margin: auto;
         padding: auto;
 
     }
-    #hometext{
-        font-size:14px;
+
+    #hometext {
+        font-size: 14px;
     }
 }
-
-
-
